Change more object api handler paths
Expose in each object kind section this triplet of handlers:

GET /namespaces/{namespace}/{kind}/{name}
GET /namespaces/{namespace}/{kind}/{name}/config
GET /namespaces/{namespace}/{kind}/{name}/file
